@@ -1,5 +1,5 @@
 #!/bin/bash
-# Creation du repertoire de l'utilisateur mkhdir.sh 22/01/2009
+# Creation du repertoire de l'utilisateur mkhdir.sh 08/09/2011
 # $1 : login
 # $2 : group eleves ou profs
 # $3 : passwd
@@ -17,14 +17,13 @@ if [ ! -d $1 ]; then
 	cp -r /etc/skel/* /home/$1/
 	chown -R $1:lcs-users /home/$1/Maildir
 	chmod -R 700 /home/$1/Maildir
-
-        chown $1:lcs-users /home/$1/Documents
-        chmod 770 /home/$1/Documents
+	chown $1:lcs-users /home/$1/Documents
+	chmod 770 /home/$1/Documents
 
 	# Fixation droits sur repertoire Profile si il existe
 	if [ -d $1/Profile ]; then
 		chown www-data:lcs-users /home/$1/Profile
-        	chmod 750 /home/$1/Profile
+        chmod 750 /home/$1/Profile
 	fi
 
         chown -R $1:lcs-users /home/$1/public_html
@@ -33,7 +32,7 @@ if [ ! -d $1 ]; then
 	# si eleve
 	if [ $2 = "eleves" ]; then
 		chown -R root:root /home/$1/public_html
-                chmod 755 /home/$1/public_html
+		chmod 755 /home/$1/public_html
 		# Creation bdd eleve
 		/usr/share/lcs/sbin/mysqlDbInit.pl $1 $PASSWD $2	
 	else
@@ -41,22 +40,22 @@ if [ ! -d $1 ]; then
 		/usr/share/lcs/sbin/mysqlDbInit.pl $1 $PASSWD $2	
 	fi
 else 	
-        # Si le repertoire de l'utilisateur existe
-        chown root:lcs-users $1
+	# Si le repertoire de l'utilisateur existe
+	chown root:lcs-users $1
 	chmod 750 $1	
 	if [ ! -d $1/public_html ]; then
-	        # ReCreation du rep public_html
+		# Recreation du rep public_html
 		cp -r /etc/skel/public_html /home/$1/
-                chown -R $1:lcs-users /home/$1/public_html
-                chmod 770 /home/$1/public_html
-                chmod 664 /home/$1/public_html/index.html
+		chown -R $1:lcs-users /home/$1/public_html
+		chmod 770 /home/$1/public_html
+		chmod 664 /home/$1/public_html/index.html
 		# si eleve
-	        if [ $2 = "eleves" ]; then
+		if [ $2 = "eleves" ]; then
 		    chown -R root:root /home/$1/public_html
-                    chmod 755 /home/$1/public_html
+			chmod 755 /home/$1/public_html
 		    # Creation bdd eleve si elle n'existe pas
-                    if [ `mysql -s -e "SELECT Db FROM mysql.db WHERE User='$1'" | wc -l` == 0 ]; then
-                        /usr/share/lcs/sbin/mysqlDbInit.pl $1 $PASSWD $2
+			if [ `mysql -s -e "SELECT Db FROM mysql.db WHERE User='$1'" | wc -l` == 0 ]; then
+				/usr/share/lcs/sbin/mysqlDbInit.pl $1 $PASSWD $2
 		    fi	
 		else
 		    # si profs ou administratifs
@@ -64,18 +63,24 @@ else
 		    if [ `mysql -s -e "SELECT Db FROM mysql.db WHERE User='$1'" | wc -l` == 0 ]; then
                         /usr/share/lcs/sbin/mysqlDbInit.pl $1 $PASSWD $2
 		    fi	
-        	fi
         fi
+    fi
 	if [ ! -d $1/Documents ]; then
-            # Recreation du rep Documents
-            mkdir  /home/$1/Documents
-            chown $1:lcs-users /home/$1/Documents
-            chmod 770 /home/$1/Documents
-        fi
-        if [ ! -d $1/Maidir ]; then
-            cp -r /etc/skel/Maildir /home/$1/
-            chown -R $1:lcs-users /home/$1/Maildir
-	    chmod -R 700 /home/$1/Maildir
-        fi
+		# Recreation du rep Documents
+		mkdir  /home/$1/Documents
+		chown $1:lcs-users /home/$1/Documents
+		chmod 770 /home/$1/Documents
+	fi
+	if [ ! -d $1/Maildir ]; then
+		# Recreation Maildir
+		cp -r /etc/skel/Maildir /home/$1/
+		chown -R $1:lcs-users /home/$1/Maildir
+		chmod -R 700 /home/$1/Maildir
+	fi
+	if [ ! -d $1/Profile ]; then
+		mkdir /home/$1/Profile
+		chown www-data:lcs-users /home/$1/Profile
+        chmod 750 /home/$1/Profile
+	fi
 fi
 exit 0
